Added Ajax For Realtime Validation of forms

--- a/tasks/templates/tasks/register.html
+++ b/tasks/templates/tasks/register.html
@@ -27,12 +27,14 @@ window.addEventListener('load', function () {
         document.getElementById("Input_Email").value = "";
     }
 
-
-
+    
+   
 
   })
-   
-    
+
+
+
+
 </script>
 
 
@@ -63,28 +65,29 @@ window.addEventListener('load', function () {
                     </div>
 
                     <div class="container mb-2  form-floating">
-
-                    <input name="username" type="text" class="form-control inputareast" value="{{form.username.value}}" id="Input_Username" placeholder="text">
+                    <!-- //on change checking username availablity -->
+                    <input onkeyup="checkAvailability(this.id);" name="username" type="text" class="form-control inputareast" value="{{form.username.value}}" id="Input_Username" placeholder="text">
                     <label style="color: #5e5e5e;" for="Input_Username" >Username</label>
-                    <h6 class="text-danger" style="font-weight: 400;">
-                        
+
+                    <!-- area for show errors -->
+                    <h6 class="text-danger" style="font-weight: 400;" id="Input_Username_Error" > 
                         {{form.username.errors}}
                         </h6>
+
                     </div>
 
                     <div class="container mb-2  form-floating">
-                        <input name="email" type="email" class="inputareast form-control" id="Input_Email" placeholder="email"  value="{{form.email.value}}">
+                         <!-- //on change checking email availablity -->
+                        <input onkeyup="checkemail(this.id);"  name="email" type="email" class="inputareast form-control" id="Input_Email" placeholder="email"  value="{{form.email.value}}">
                         <label style="color: #5e5e5e;" for="Input_Email">Email Address</label>
-                        <h6 class="text-danger" style="font-weight: 400;">
-                        
+                        <h6 class="text-danger" style="font-weight: 400;" id="Input_Email_Error" >
                             {{form.email.errors}}
                             </h6>
                         </div>
 
-
                         <div class="input-group mb-3">
                             <div class="container mb-2  form-floating">
-                                <input name="password1" type="password" class="form-control inputareast" id="loginPassword1" placeholder="password" aria-describedby="passtogglebutton">
+                                <input  onkeyup="checkpassword();" name="password1" type="password" class="form-control inputareast" id="loginPassword1" placeholder="password" aria-describedby="passtogglebutton">
                                 <label style="color: #5e5e5e;" for="loginPassword1"> Password   </label>
                             </div>
                                 <button style="border:none;" class="btn bi bi-eye-slash-fill" type="button" id="passtogglebutton1" onclick="togglebutton1()"></button>
@@ -93,33 +96,26 @@ window.addEventListener('load', function () {
 
                         <div class="input-group mb-3">
                             <div class="container mb-2  form-floating">
-                                <input name="password2" type="password" class="form-control inputareast" id="loginPassword2" placeholder="password" aria-describedby="passtogglebutton">
+                                <input onkeyup="checkpassword();" name="password2" type="password" class="form-control inputareast" id="loginPassword2" placeholder="password" aria-describedby="passtogglebutton">
                                 <label style="color: #5e5e5e;" for="loginPassword2">Confirm Password </label>
                             </div>
                                 <button style="border:none;" class="btn bi bi-eye-slash-fill" type="button" id="passtogglebutton2" onclick="togglebutton2()"></button>
-                                
+                                 
                             </div>
-                            <h6 class="text-danger" style="font-weight: 400;">
-
+                            <h6 class="ps-3"style="font-weight: 400; color:red;" id="Input_Password_Error">
                                 {{form.password2.errors}}
-                            </h6>
+                            </h6> 
+                            
                            
 
     
-                <button type="submit" name = "create user" class="btn btn-success m-2"> Register Now </button>
+                <button type="submit" id="Id_registerButton" class="btn btn-success m-2" disabled = true> Register Now </button>
 
             </form>
- 
-         
-           
 
 
             <h6 class="mt-2 mb-4 ms-2"style="font-family: poppins;font-weight: 300;font-size: smaller;"> Already have an account ? <a href="{% url 'login' %}">Login Here </a> </h6>
         </div>
-
-
-
-
 
 
 
