--- a/tasks/templates/tasks/update.html
+++ b/tasks/templates/tasks/update.html
@@ -6,7 +6,16 @@ Edit Task
 
 
 {% block content %}
+<script>
 
+//form sumbit title make looks
+window.addEventListener('load', function () {
+    document.getElementById("id_title").className = "form-control inputareast";
+  })
+// 
+
+
+</script>
 
 
 <div class="container  mt-4 col-xl-6 col-sm-12" style="min-width:500px; background-color: white; ">
